# hybrid_servoing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  todo
algorithm/c++/: solvehfvc.h
algorithm/matlab/: solvehfvc.m
algorithms/: solvehfvc.cpp  solvehfvc.h
apps/: block_tilting.h  hybrid_servoing_tasks.h  levering_up.cpp  levering_up.h  plane_engaging.cpp  plane_engaging.h
config/: controllers.yaml  hardware_params.yaml
examples/backup/SuctionCup/: Suction_cup_control.m
examples/backup/bottle_rotation/: bottle_rotation_control.m  symbolic_derivation_of_gradients_bottle_rotation.m
examples/block_tilting/: CodeGenWrapperBlockTilting.m  block_tilting_control.m  symbolic_derivation_of_gradients_block_tilting.m
examples/levering_up/: levering_up_control.m  symbolic_derivation_of_jacobian.m
experiments/: .gitignore  README.md  robot_bridge.cpp  robot_bridge.h
experiments/block_tilting_todo/: interface.fig  interface.m
experiments/diamond/config/: controller.yaml  hardware.yaml  task.yaml
experiments/diamond/cpp_robot_server/: CMakeLists.txt  diamond.cpp  diamond.h  server_node.cpp
experiments/diamond/cpp_robot_server/launch/: diamond.launch  step_crawling.launch
experiments/diamond/data/: hybrid_action.txt  pose_feedback.txt  pose_set.txt  velocity_set.txt
experiments/diamond/matlab_gui/: debug.mat  interface.fig  interface.m
experiments/engaging/config/: controller.yaml  hardware.yaml  task.yaml
experiments/engaging/config/abb/: controller.yaml  hardware.yaml  task.yaml
experiments/engaging/config/ur/: controller.yaml  hardware.yaml  task.yaml
experiments/engaging/cpp_robot_server/: CMakeLists.txt  engaging.cpp  engaging.h  server_node.cpp
experiments/engaging/cpp_robot_server/launch/: engaging.launch  engaging_abb.launch
experiments/engaging/data/: f_data_filtered.txt  f_data_selected.txt  f_prob.txt  f_queue.txt  f_weights.txt  pose_feedback.txt  pose_set.txt  process.txt  v_queue.txt
experiments/engaging/matlab_gui/: interface.fig  interface.m  test_weight_computation.m
experiments/levering_up/config/: controller.yaml  hardware.yaml  task.yaml
experiments/levering_up/cpp_robot_server/: CMakeLists.txt  levering_up.cpp  levering_up.h  server_node.cpp
experiments/levering_up/cpp_robot_server/launch/: levering_up.launch
experiments/levering_up/data/: pose_feedback.txt  pose_set.txt
experiments/levering_up/matlab_gui/: interface.fig  interface.m
experiments/plane_engaging/: plane_engaging.cpp  plane_engaging.h
experiments/plane_engaging/config/: controller.yaml  hardware.yaml  task.yaml
experiments/step_crawling/config/: controller.yaml  hardware.yaml  task.yaml
experiments/step_crawling/cpp_robot_server/: CMakeLists.txt  server_node.cpp  step_crawling.cpp  step_crawling.h
experiments/step_crawling/cpp_robot_server/launch/: step_crawling.launch
experiments/step_crawling/data/: f_queue.txt
experiments/step_crawling/matlab_gui/: cleanstart.m  interface.fig
experiments/tracking2d/config/: controller.yaml  hardware.yaml  task.yaml
experiments/tracking2d/config/block_tilting/: controller.yaml  task.yaml
experiments/tracking2d/config/motion_planning/: controller.yaml  hardware.yaml  task.yaml
experiments/tracking2d/config/obstacle_course/: controller.yaml  hardware.yaml  task.yaml
experiments/tracking2d/config/stair_climbing/: controller.yaml  hardware.yaml
experiments/tracking2d/cpp_robot_server/: CMakeLists.txt  server_node.cpp  tracking2d.cpp  tracking2d.h
experiments/tracking2d/cpp_robot_server/launch/: block_tilting.launch  motion_planning.launch  obstacle_course.launch  stair_climbing.launch  tracking2d.launch
experiments/tracking2d/data/: pose_set.txt  traj_block_tilting.csv  traj_obstacle_course.csv  traj_plastic_cube.csv  velocity_set.txt
experiments/tracking2d/matlab_gui/: cleanstart.m  interface.asv  interface.fig  interface.m  interface.m~
include/: eiquadprog.hpp  hybrid_servoing_tasks.h  robot_bridge.h  solvehfvc.h  utilities.h
launch/: robot_bridge.launch
src/: hybrid_servoing_tasks.cpp  robot_bridge.cpp  solvehfvc.cpp
tasks/block_tilting_todo/: block_tilting.cpp
tasks/levering_up/: levering_up.cpp  levering_up.h
tasks/plane_engaging/: plane_engaging.cpp  plane_engaging.h
tasks/reorienting_todo/: reorienting.cpp  reorienting.h
