<?xml version="1.0"?>
<package format="2">
  <name>hybrid_servoing</name>
  <version>0.0.0</version>
  <description>A package for computing hybrid force-velocity control actions to execute a contact-rich motion plan robustly</description>

  <maintainer email="yifanh@cmu.edu">Yifan Hou</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>forcecontrol</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>forcecontrol</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>forcecontrol</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
